"fixed grid banner rendering bug, where most recent month was cut off"

--- a/src/pages/utilityComponents/userDropdown/_userDropdown.scss
+++ b/src/pages/utilityComponents/userDropdown/_userDropdown.scss
@@ -25,6 +25,7 @@
     border-top: none;
     flex-direction: column;
     border-radius: 0 0 0 0.3rem;
+    z-index: 1;
 }
 .user-dropdown-modal-item{
     display: flex;
